--- a/rop/Makefile
+++ b/rop/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -fno-stack-protector
 all: vulnerable vulnerable_small_buffer
 
 clean:
-	rm -f vulnerable vulnerable_small_buffer
+	rm -f vulnerable{,_small_buffer}
 
 disable-aslr:
 	sudo tee /proc/sys/kernel/randomize_va_space <<< "0"
